--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -140,9 +140,9 @@
   </div>
 </div>
 
-<script src="./js/vue.js"></script>
-<script src="./js/axios.min.js"></script>
-<script src="./js/amap.min.js"></script>
+<script src="js/vue.js"></script>
+<script src="js/axios.min.js"></script>
+<script src="js/amap.min.js"></script>
 <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=ddd292c88aa1bad9c04891a47724f40a"></script>
 
 
